--- a/src/app/components/register/register.component.scss
+++ b/src/app/components/register/register.component.scss
@@ -222,3 +222,41 @@ button:focus {
 .ng-invalid.ng-touched:not(form)  {
   border: 1px solid black;
 }
+.buttonCo {
+  border-radius: 4px;
+  background-color: #f4511e;
+  border: none;
+  color: #FFFFFF;
+  text-align: center;
+  font-size: 28px;
+  padding: 20px;
+  width: 200px;
+  transition: all 0.5s;
+  cursor: pointer;
+  margin: 5px;
+}
+
+.buttonCo span {
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  transition: 0.5s;
+}
+
+.buttonCo span:after {
+  content: '\00bb';
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  right: -20px;
+  transition: 0.5s;
+}
+
+.buttonCo:hover span {
+  padding-right: 25px;
+}
+
+.buttonCo:hover span:after {
+  opacity: 1;
+  right: 0;
+}
